Add user viewer and update connects list
