# api/model/connect.go
@@ -4,7 +4,9 @@ type Connect struct {
 	ID       string        `json:"id"`
 	Status   RequestStatus `json:"status"`
 	UserID   string        `json:"user_id"`
+	User     User          `json:"user"`
 	FriendID string        `json:"friend_id"`
+	Friend   User          `json:"friend"`
 }
 
 type ConnectList struct {
@@ -34,8 +36,8 @@ type DisconnectRequest struct {
 }
 
 type ConnectFindOpts struct {
-	Status   Filter
-	FriendID Filter
+	Status Filter
+	UserID Filter
 	FieldsOpts
 	OrderByOpts
 	PaginationOpts
